--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@notifee/react-native": "^9.0.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-firebase/app": "^20.5.0",
+    "@react-native-firebase/database": "^20.5.0",
+    "@react-native-firebase/firestore": "^20.5.0",
+    "@react-native-picker/picker": "^2.8.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "lucide-react": "^0.439.0",
@@ -19,7 +23,9 @@
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-ble-plx": "^3.2.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.6.0",
